--- a/hello/templates/hello/search.html
+++ b/hello/templates/hello/search.html
@@ -95,7 +95,7 @@
           <br/>  
         2. Click the "Search" button once the number is scanned.
         <br/>
-        <div class="indent1" style="font-size: 17px; margin-left: 20px">a. If the number is not found, the page will display an error message. </div>
+        <div class="indent1" style="font-size: 17px; margin-left: 20px">a. If the number is not found, the page will display an error message. Direct them to use the self check-in station</div>
           <br/>
           <div class="indent1" style="font-size: 17px; margin-left: 20px">b. If the number is found, the page will display the attendee's information. </div>
           <br/>
