--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -64,7 +64,7 @@
   <div class="right-column" style="flex: 1;">
     <!-- Text to be displayed on the right side -->
     <h3>This page is for importing new data into the system</h3>
-    <h4>Please make sure that the file is an Excel .xlsx file before importing</h4>
+    <h4>Please make sure that the file is an Excel or csv file before importing</h4>
     <div style="font-size: 20px; line-height: 1.6;">
       <p>
         - To import an external file, follow these steps:
@@ -86,6 +86,6 @@
         - To download the saved backup of the database before the last upload, click the "Download backup" button.
         </p>
       </div>   
-
-      {% endblock %}
-    </form>
+  </div>
+</div>
+{% endblock %}
