finalizing help text

--- a/hello/templates/hello/database_upload_page.html
+++ b/hello/templates/hello/database_upload_page.html
@@ -10,7 +10,7 @@
       {% csrf_token %}
 
       <div class="form-group">
-        <label for="file">.xlsx File Path:</label>
+        <label for="file">File Path:</label>
         <input type="file" class="form-control-file" id="file" name="file" />
       </div>
       <h2>Enter the letters of the columns which match the following fields</h2>
@@ -70,7 +70,7 @@
         - To import an external file, follow these steps:
         <br/> 
           <div class="indent1" style="font-size: 17px; margin-left: 20px">
-            1.  Click the "Choose file" button and select the .xlsx file to import
+            1.  Click the "Choose file" button and select the file to import
         </div>
         <br/> 
           <div class="indent1" style="font-size: 17px; margin-left: 20px">
