--- a/hello/templates/hello/QR_entry_success.html
+++ b/hello/templates/hello/QR_entry_success.html
@@ -1,20 +1,35 @@
 {% extends "hello/layout.html" %} {% block title %} Success! {% endblock %}
+{% block content %}
 {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
- {% block content %}
-<h2>
-  Thanks for registering for the Career Fair! Your information is now in our
-  system and check-in next time will be a breeze.
-</h2>
 
-<div style="text-align: center">
-    <h3>Your table number is {{ table_number }}.</h3>
-  <div style="margin-bottom: 20px">
-    <p>click the button below to scan a new QR code</p>
+<div class="container" style="display: flex; text-align:center">
+  <div class="left-column" style="flex: 1;">
+    <div>
+      <h3>
+        Success!
+      </h3>
+    </div>
+    <div>
+      <p>
+      Their table number is: {{ table_number }}
+      </p>
+    </div>
+    <div>
+      <p>
+      Their company name is: {{ company_name }}
+      </p>
+    </div>  
   </div>
-  <a href="{% url 'search_by_id' %}" class="btn"
-    >ID Search</a
-  >
+
+  <div class="right-column" style="flex: 1;">
+    <div style="margin-bottom: 20px">
+      <p>click the button below to scan a new QR code</p>
+    </div>
+    <a href="{% url 'search_by_id' %}" class="btn">ID Search</a>
+  </div>
 </div>
+    
 {% endblock %}
+
