--- a/hello/templates/hello/qr_code/qr_code_email.html
+++ b/hello/templates/hello/qr_code/qr_code_email.html
@@ -1,13 +1,13 @@
-Hello {{ first_name }},
-Thank you for registering for the RIT Career Fair! Please find your QR code attached to this email.
-You will need to present this QR code at the Career Fair to check in. If you have any questions,
-please contact us at _______. We look forward to seeing you at the Career Fair!
-
-
-id number: {{ id_number }}
-
-Click the below link to show your check-in code:
-<img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl={{id_number}}" alt="QR Code">
-
-
-This email was sent from the website at the push of a button!
+Hello <First>,
+    Thank you for registering for the RIT Career Fair! Please open the link below to access your QR code to present at the upcoming RIT Career Fair. Please note this QR code is unique to you. Please do not share it with others in your organization.
+    
+    This is an administrative email and is not being monitored. If you have any questions, please contact us at ritcareerfair@rit.edu. We look forward to seeing you at the Career Fair!
+    
+    ID number: <ID Number>
+    
+    Click the below link to show your check-in code:
+    https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=<ID Number> 
+    
+    Thank you,
+    RIT Career Fair Committee
+    
