changing how emails are attached

--- a/hello/templates/hello/qr_code/qr_code_email.html
+++ b/hello/templates/hello/qr_code/qr_code_email.html
@@ -3,10 +3,10 @@ Hello {{First}},
     
     This is an administrative email and is not being monitored. If you have any questions, please contact us at ritcareerfair@rit.edu. We look forward to seeing you at the Career Fair!
     
-    ID number: {{ID Number}}
+    ID number: {{id_number}}
     
     Click the below link to show your check-in code:
-    https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl={{ID Number}} 
+    https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl={{id_number}} 
     
     Thank you,
     RIT Career Fair Committee
