--- a/hello/templates/hello/qr_code/send_qr_code.html
+++ b/hello/templates/hello/qr_code/send_qr_code.html
@@ -1,4 +1,5 @@
-{% extends "hello/layout.html" %} {% block content %}
+{% extends "hello/layout.html" %}
+{% block content %}
 
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
@@ -6,48 +7,14 @@
 <h2>Enter the id number to send the QR code to</h2>
 <form id="qrCodeForm" action="{% url 'send_qr_code' %}" method="post">
   {% csrf_token %}
-  <p>{{ form.email }}</p>
-  {% if form.email.errors %} {{ form.email.errors }} {% endif %}
   <p><input type="text" name="id_number" required id="id_number" /></p>
   <input type="submit" class="btn btn-default" value="Send QR Code" />
 </form>
 
-<script>
-  document
-    .getElementById("qrCodeForm")
-    .addEventListener("submit", function (event) {
-      event.preventDefault(); // Prevent form submission
-      sendQrCodeEmail(); // Call the custom function to handle form submission
-    });
+{% if message %}
+<div class="alert alert-success">
+  {{ message }}
+</div>
+{% endif %}
 
-  function sendQrCodeEmail() {
-    const idNumber = document.getElementById("id_number").value; // Get the id number from the form
-
-    fetch("{% url 'send_qr_code' %}", { // Send a POST request to the view
-      method: "POST", // Set the request method
-      headers: { // Set the request headers
-        "X-CSRFToken": "{{ csrf_token }}", // Set the CSRF token
-        "Content-Type": "application/x-www-form-urlencoded", // Set the content type header
-      },
-      body: new URLSearchParams({ // Set the request body
-        id_number: idNumber, // Add the id number to the request body
-        csrfmiddlewaretoken: "{{ csrf_token }}", // Add the CSRF token to the request body
-      }).toString(), // Convert the request body to a string
-    })
-      .then((response) => {// Handle the response
-        if (response.ok) { // If the response is ok
-          window.location.href = "{% url 'qr_email_success' %}"; // Redirect to the success page
-        } else { // If the response is not ok
-          console.error(
-            "Error sending QR code email:",
-            response.status,
-            response.statusText
-          );
-        }
-      })
-      .catch((error) => {
-        console.error("Error sending QR code email:", error);
-      });
-  }
-</script>
 {% endblock %}
