adjusting text for accounting careeer fair

--- a/hello/templates/hello/on_site_entry_success.html
+++ b/hello/templates/hello/on_site_entry_success.html
@@ -7,7 +7,7 @@
 <div class="container" style="display: flex; text-align:center">
   <div class="left-column" style="flex: 1;">
     <h3>
-      Thanks for registering for the Career Fair! Please ask a staff member if you are unsure of your table number.
+      Thanks for checking into the Career Fair!
     </h3>
   </div>
 
@@ -15,7 +15,7 @@
     <div style="margin-bottom: 20px">
       <p>click the button below to Check in</p>
     </div>
-    <a href="{% url 'add_entry' %}" class="btn" style="margin-right: 10px">Add Entry</a>
+    <a href="{% url 'add_entry' %}" class="btn" style="margin-right: 10px">Check in</a>
   </div>
 </div>
     
