--- a/hello/templates/hello/add_entry.html
+++ b/hello/templates/hello/add_entry.html
@@ -45,7 +45,7 @@
             <label for="alumni">Alumni:</label>
             <input type="checkbox" id="alumni" name="alumni" /><br />
 
-            <label for="release_info">Can We Release Your Info:</label>
+            <label for="release_info">Can we release your info to students?:</label>
             <input type="checkbox" id="release_info" name="release_info" /><br />
 
             <button type="submit" class="btn">Register</button>
