--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -21,10 +21,10 @@
 <body>
   <div class="navbar">
     <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-    <a href="{% url 'add_entry' %}" class="navbar-item">Add Entry</a>
+    <a href="{% url 'add_entry' %}" class="navbar-item">No QR Check-in</a>
     <a href="{% url 'qr_email_page' %}" class="navbar-item">Send QR Codes</a>
     <a href="{% url 'db_display' 1 %}" class="navbar-item">View Database</a>
-    <a href="{% url 'id_search' %}" class="navbar-item">Search by ID</a>
+    <a href="{% url 'id_search' %}" class="navbar-item">QR Check-in</a>
     <a href="{% url 'add_new_data' %}" class="navbar-item">Upload Data</a>
     <a href="{% url 'self_registration' %}" class="navbar-item">Self Registration</a>
     {% if user.is_authenticated %}
