fixing name in email

--- a/hello/templates/hello/qr_code/qr_code_email.html
+++ b/hello/templates/hello/qr_code/qr_code_email.html
@@ -1,4 +1,4 @@
-Hello {{First}},
+Hello {{first_name}},
     Thank you for registering for the RIT Career Fair! Please open the link below to access your QR code to present at the upcoming RIT Career Fair. Please note this QR code is unique to you. Please do not share it with others in your organization.
     
     This is an administrative email and is not being monitored. If you have any questions, please contact us at ritcareerfair@rit.edu. We look forward to seeing you at the Career Fair!
