removing mention of table number from add entry

--- a/hello/templates/hello/add_entry.html
+++ b/hello/templates/hello/add_entry.html
@@ -6,7 +6,7 @@
 
 <div class="container" style="display: flex;">
     <div class="left-column" style="flex: 1;">
-        <h2>Add entry</h2>
+        <h2>Self Registration</h2>
 
         <!-- Error messages -->
         {% if errors.first_name %}
@@ -54,7 +54,7 @@
     <div class="right-column" style="flex: 1;">
         <!-- Text to be displayed on the right side -->
         <h3>What Happens Next?</h3>
-        <p>Once you submit your information, ask one of our staff for the table number of your company. Please ensure the accuracy of your information before submitting.</p>
+        <p>Once you submit your information, you are free to head to your table. Please ensure the accuracy of your information before submitting.</p>
     </div>
 </div>
 {% endblock %}
