--- a/hello/templates/hello/home.html
+++ b/hello/templates/hello/home.html
@@ -7,8 +7,8 @@
 
 <h1>Welcome to the check-in system v2</h1>
 {% if user.is_authenticated %}
-<img src="{% static 'hello/Dance_cat.gif' %}" alt="GIF Image">
-<p>Hi {{ user.username }}!</p>
+<!-- <img src="{% static 'hello/Dance_cat.gif' %}" alt="GIF Image"> -->
+<p>Hello, {{ user.username }}!</p>
 {% endif %}
 
 {% endblock %}
