adding id to submit button for testing reference

--- a/hello/templates/hello/self_registration_page.html
+++ b/hello/templates/hello/self_registration_page.html
@@ -52,7 +52,7 @@
             <label for="release_info">Can We Release Your Information?</label>
             <input type="checkbox" id="release_info" name="release_info" /><br />
 
-            <button type="submit" class="btn">Register</button>
+            <button type="submit" id="submit_button" class="btn">Register</button>
         </form>
     </div>
     <div class="right-column"  style="flex: 1;">
