--- a/hello/templates/hello/qr_code/send_qr_code.html
+++ b/hello/templates/hello/qr_code/send_qr_code.html
@@ -4,17 +4,25 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
-<h2>Send QR Code Emails</h2>
-<p>Click the button below to send QR code emails to all eligible recipients.</p>
+<h2>Email Configuration</h2>
+<p>Toggle the checkbox to enable or disable auto email sending.</p>
 
-<form id="qrCodeForm" action="{% url 'send_qr_code' %}" method="post">
+<form method="post">
   {% csrf_token %}
-  <input type="submit" class="btn btn-default" value="Send QR Code Emails" />
+  <div class="form-check">
+    <input type="checkbox" class="form-check-input" id="autoEmailSendingCheckbox" name="auto_email_sending_active" {% if config.auto_email_sending_active %}checked{% endif %}>
+    <label class="form-check-label" for="autoEmailSendingCheckbox">Auto Email Sending</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Save Config</button>
 </form>
 
-{% if message %}
+{% if config.auto_email_sending_active %}
 <div class="alert alert-success">
-  {{ message }}
+  Auto email sending is enabled.
+</div>
+{% else %}
+<div class="alert alert-warning">
+  Auto email sending is disabled.
 </div>
 {% endif %}
 
