updating search page and email template

--- a/hello/templates/hello/search.html
+++ b/hello/templates/hello/search.html
@@ -78,6 +78,11 @@
             {% if entry %}<input type="text" name="id_number" value="{{ entry.id_number }}" />{% endif %}
           </td>
         </tr>
+        <tr>
+          <th>Table Number:</th>
+          <td>
+            {% if entry %}<input type="text" name="table_number" value="{{ entry.table_number }}" />{% endif %}
+          </td>
 
         <tr>
           <td colspan="2">
