--- a/hello/templates/hello/qr_code/qr_code_email.html
+++ b/hello/templates/hello/qr_code/qr_code_email.html
@@ -4,6 +4,8 @@ Hello {{first_name}},
     This is an administrative email and is not being monitored. If you have any questions, please contact us at ritcareerfair@rit.edu. We look forward to seeing you at the Career Fair!
     
     ID number: {{id_number}}
+
+    Table number: {{table_number}}
     
     Click the below link to show your check-in code:
     https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl={{id_number}} 
