--- a/hello/templates/hello/layout.html
+++ b/hello/templates/hello/layout.html
@@ -6,7 +6,12 @@
   <title>{% block title %}{% endblock %}</title>
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
+  <!-- integrating bootstrap v5.3.2 using the link below.  see bootstrap documentation here: https://getbootstrap.com/ -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
+
+<!-- TODO: do we need this ...? -->
 {% if user.is_authenticated %}
   <h2>System messages</h2>
   {% if messages %}
@@ -19,32 +24,74 @@
 {% endif %}
 
 <body>
-  <div class="navbar">
-    <a href="{% url 'home' %}" class="navbar-brand">Home</a>
-    <a href="{% url 'add_entry' %}" class="navbar-item">No QR Check-in</a>
-    <a href="{% url 'qr_email_page' %}" class="navbar-item">Send QR Codes</a>
-    <a href="{% url 'db_display' 1 %}" class="navbar-item">View Database</a>
-    <a href="{% url 'id_search' %}" class="navbar-item">QR Check-in</a>
-    <a href="{% url 'add_new_data' %}" class="navbar-item">Upload Data</a>
-    <a href="{% url 'self_registration' %}" class="navbar-item">Self Registration</a>
-    {% if user.is_authenticated %}
-    <li>User: {{ user.get_username }}</li>
-    <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
-    {% else %}
-    <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
-    {% endif %}
+  <nav class="navbar">
+    <ul class = "nav navbar-nav navbar-left">
+      <li class = "nav-item">
+        <a href="{% url 'home' %}" class="nav-link">
+          <!-- home icon from bootstrap (https://icons.getbootstrap.com/icons/house-fill/) -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+            <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293z"/>
+            <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293z"/>
+          </svg>
+        </a>
+      </li>
+    </ul> 
+    <ul class = "nav nav-fill nav-underline me-auto">
+      <!-- me-auto in bootstrap aligns nav items left (default is center) -->
+      <li class = "nav-item">
+        <a href="{% url 'add_entry' %}" class="nav-link">No QR Check-in</a>
+      </li>
+      <li class = "nav-item">
+        <a href="{% url 'qr_email_page' %}" class="nav-link">Send QR Codes</a>
+      </li>
+      <li class = "nav-item">
+        <a href="{% url 'db_display' 1 %}" class="nav-link">View Database</a>
+      </li>
+      <li class = "nav-item">
+        <a href="{% url 'id_search' %}" class="nav-link">QR Check-in</a>
+      </li>
+      <li class = "nav-item">
+        <a href="{% url 'add_new_data' %}" class="nav-link">Upload Data</a>
+      </li>
+      <li class = "nav-item">
+        <a href="{% url 'self_registration' %}" class="nav-link">Self Registration</a>
+      </li>
+    </ul>
 
-  </div>
+    <ul class = "nav navbar-right nav-underline">
+      {% if user.is_authenticated %}
+      <li class = "nav-item navbar-text">
+        User: {{ user.get_username }}
+      </li>
+      <li class = "nav-item">
+        <a href="{% url 'logout' %}?next={{ request.path }}" class="nav-link">
+          <!-- logout icon from bootstrap (https://icons.getbootstrap.com/icons/box-arrow-right/) -->
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
+            <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
+          </svg>
+          Logout
+        </a>
+      </li>
+      {% else %}
+      <li class = "nav-item">
+        <a href="{% url 'login' %}?next={{ request.path }}" class="nav-link">Login</a>
+      </li>
+      {% endif %}
+    </ul>
+
+  </nav>
 
 
   <div class="body-content">
     {% block content %}
     {% endblock %}
     <hr />
-    <footer>
-      <p>&copy; Benjamin Fauteux 2023</p>
-    </footer>
   </div>
+
+  <footer>
+    <p>&copy; Benjamin Fauteux 2023</p>
+  </footer>
 </body>
 
 </html>
