--- a/hello/templates/hello/db_display.html
+++ b/hello/templates/hello/db_display.html
@@ -3,39 +3,48 @@
 {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
-<h2>Database Display</h2> 
+<h2>Database Display</h2>
 
-<div class="pagination">
-  {% if page_obj.has_previous %}
-  <a
-    class="page-link"
-    href="{% url 'db_display' page_obj.previous_page_number|stringformat:'s' %}"
-    >Previous</a
-  >
-  {% endif %}
+  <div class = 'row'>
+    <!-- see https://getbootstrap.com/docs/5.3/layout/grid/ for bootstraps "grid" setup-->
+    <div class="col-9">
+      <nav>
+        <ul class="pagination">
+          {% if page_obj.has_previous %}
+          <li class="page-item"><a
+            class="page-link"
+            href="{% url 'db_display' page_obj.previous_page_number|stringformat:'s' %}"
+            >Previous</a
+          ></li>
+          {% endif %}
+          
+          <li class="page-item active"><a class="page-link current-page" href="#">{{ page_obj.number }}</a></li>
+          
+          {% if page_obj.has_next %}
+          <li class="page-item"><a
+            class="page-link"
+            href="{% url 'db_display' page_obj.next_page_number|stringformat:'s' %}"
+            >Next</a
+          ></li>
+          {% endif %}
+        </ul>
+      </nav>
+    </div>
 
-  <span class="current-page">{{ page_obj.number }}</span>
+    <div class="col-3">
+      <form method="get" action="">
+        {% if request.GET.filter_blanks %}
+        <input type="hidden" name="filter_blanks" value="false" />
+        <button type="submit" class="btn btn-warning">Show All Entries</button>
+        {% else %}
+        <input type="hidden" name="filter_blanks" value="true" />
+        <button type="submit" class="btn btn-warning">View Rows with Blanks</button>
+        {% endif %}
+      </form>
+    </div>
+  </div>
 
-  {% if page_obj.has_next %}
-  <a
-    class="page-link"
-    href="{% url 'db_display' page_obj.next_page_number|stringformat:'s' %}"
-    >Next</a
-  >
-  {% endif %}
-</div>
-
-<form method="get" action="">
-  {% if request.GET.filter_blanks %}
-  <input type="hidden" name="filter_blanks" value="false" />
-  <button type="submit">Show All Entries</button>
-  {% else %}
-  <input type="hidden" name="filter_blanks" value="true" />
-  <button type="submit">View Rows with Blanks</button>
-  {% endif %}
-</form>
-
-<table class="table">
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>ID Number</th>
@@ -70,23 +79,26 @@
   </tbody>
 </table>
 
-<div class="pagination">
-  {% if page_obj.has_previous %}
-  <a
-    class="page-link"
-    href="{% url 'db_display' page_obj.previous_page_number|stringformat:'s' %}"
-    >Previous</a
-  >
-  {% endif %}
+<nav>
+  <ul class="pagination">
+    {% if page_obj.has_previous %}
+    <li class="page-item"><a
+      class="page-link"
+      href="{% url 'db_display' page_obj.previous_page_number|stringformat:'s' %}"
+      >Previous</a
+    ></li>
+    {% endif %}
+    
+    <li class="page-item active"><a class="page-link current-page" href="#">{{ page_obj.number }}</a></li>
+    
+    {% if page_obj.has_next %}
+    <li class="page-item"><a
+      class="page-link"
+      href="{% url 'db_display' page_obj.next_page_number|stringformat:'s' %}"
+      >Next</a
+    ></li>
+    {% endif %}
+  </ul>
+</nav>
 
-  <span class="current-page">{{ page_obj.number }}</span>
-
-  {% if page_obj.has_next %}
-  <a
-    class="page-link"
-    href="{% url 'db_display' page_obj.next_page_number|stringformat:'s' %}"
-    >Next</a
-  >
-  {% endif %}
-</div>
 {% endblock %}
