show blanks on db pg if null/none

--- a/hello/static/hello/site.css
+++ b/hello/static/hello/site.css
@@ -143,6 +143,9 @@ input[name=message] {
     border: solid 1px #ffc107!important;
 }
 
+.pagination > li > a {
+    color: #666666;
+}
 
 /* .btn {
     background-color: #F76902;
