--- a/hello/templates/hello/search.html
+++ b/hello/templates/hello/search.html
@@ -4,116 +4,138 @@
 {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'hello/site.css' %}" />
 
-<div class="container" style="display: flex;">
-  <div class="left-column" style="flex: 1;">
-    <h1>Search by ID Number</h1>
-    <form method="get" action="{% url 'search_by_id' %}">
-      <label for="id_number">ID Number:</label>
-      <input type="text" name="id_number" id="id_number" />
-      <button class="btn" type="submit">Search</button>
-    </form>
-    <div>
-      {% if not entry and not error2 %}
-      <div class="alert alert-danger" style="color: red">
-        There is no corresponding entry for the id number {{id_number}}.
-      </div>
-      {% endif %}
-      {% if error2 %}
-      <div class="alert alert-danger" style="color: red">
-        The id number {{id_number}} has already been checked in.
-      </div>
-      {% endif %}
-    </div>
-  
-    <h2>Result:</h2>
-    <form method="POST" action="{% url 'submit_form' %}" class="entry-form">
-      {% csrf_token %}
-      <table>
-        <tr>
-          <th>Company Name:</th>
-          <td>
-            {% if entry %}
-            <input type="text" name="company_name" value="{{ entry.company_name }}" />
-            {% endif %}
-          </td>
-        </tr>
-        <tr>
-          <th>First Name:</th>
-          <td>
-            {% if entry %}<input type="text" name="first_name" value="{{ entry.first_name }}" />
-            {% endif %}
-          </td>
-        </tr>
-        <tr>
-          <th>Last Name:</th>
-          <td>
-            {% if entry %}<input type="text" name="last_name" value="{{ entry.last_name }}" />
-            {% endif %}
-          </td>
-        </tr>
-        <tr>
-          <th>Email:</th>
-          <td>
-            {% if entry %}<input type="email" name="email" value="{{ entry.email }}" />
-            {% endif %}
-          </td>
-        </tr>
-        <tr>
-          <th>Alumni:</th>
-          <td>
-            {% if entry %}<input type="checkbox" name="alumni" {% if entry.alumni %} checked {% endif %} />{% endif %}
-          </td>
-        </tr>
-        <tr>
-          <th>Can We Release Your Info:</th>
-          <td>
-            {% if entry %}<input type="checkbox" name="release_info" {% if entry.release_info %}checked{% endif %} />
-            {% endif %}
-          </td>
-        </tr>
+<div class="row g-5">
+  <div class="col py-3 bg-body-tertiary rounded-3" >
+      <h3>Search by ID Number</h3>
 
-        <tr>
-          <th>ID Number:</th>
-          <td>
-            {% if entry %}<input type="text" name="id_number" value="{{ entry.id_number }}" />{% endif %}
-          </td>
-        </tr>
-        <tr>
-          <th>Table Number:</th>
-          <td>
-            {% if entry %}<input type="text" name="table_number" value="{{ entry.table_number }}" />{% endif %}
-          </td>
+      <form method="get" action="{% url 'search_by_id' %}" class="row g-3">
+        <div class="col-auto">
+          <label for="id_number" class="col-form-label">ID Number:</label>
+        </div>
+        <div class="col-auto">
+          <input type="text" name="id_number" id="id_number" class="form-control"/>
+        </div>
+        <div class="col-auto">
+          <button class="btn btn-secondary" type="submit">Search</button>
+        </div>
+      </form>
 
-        <tr>
-          <td colspan="2">
-            {% if entry %}
-            <button type="submit" class="btn">Check-in</button>
-            {% endif %}
-          </td>
-        </tr>
-      </table>
-    </form>
+      <div class="py-3">
+        {% if not entry and not error2 %}
+        <div class="alert alert-danger">
+          No corresponding entry for ID: {{id_number}}
+        </div>
+        {% endif %}
+        {% if error2 %}
+        <div class="alert alert-danger">
+          ID {{id_number}} has already been checked in.
+        </div>
+        {% endif %}
+      </div>
+
+      {% if entry %}
+      <h4>Please confirm your information</h4>
+      <form method="POST" action="{% url 'submit_form' %}" class="entry-form">
+        {% csrf_token %}
+        <div class="row g-2 py-1">
+          <div class="col-3">
+            <label for="company_name" class="col-form-label"><b>Company Name</b></label>
+          </div>
+          <div class="col-7">
+            <input type="text" name="company_name" value="{{ entry.company_name }}" class="form-control"/>
+          </div>
+        </div>
+
+        <div class="row g-2 py-1">
+          <div class="col-3">
+            <label for="first_name" class="col-form-label"><b>First Name</b></label>
+          </div>
+          <div class="col-7">
+            <input type="text" name="first_name" value="{{ entry.first_name }}" class="form-control"/>
+          </div>
+        </div>
+
+        <div class="row g-2 py-1">
+          <div class="col-3">
+            <label for="last_name" class="col-form-label"><b>Last Name</b></label>
+          </div>
+          <div class="col-7">
+            <input type="text" name="last_name" value="{{ entry.last_name }}" class="form-control"/>
+          </div>
+        </div>
+
+        <div class="row g-2 py-1">
+          <div class="col-3">
+            <label for="email" class="col-form-label"><b>Email</b></label>
+          </div>
+          <div class="col-7">
+            <input type="email" name="email" value="{{ entry.email }}" class="form-control"/>
+          </div>
+        </div>
+
+        <div class="row g-2 py-2">
+          <div class="col-3">
+            <label for="alumni" class="col-form-check-label"><b>Alumni</b></label>
+          </div>
+          <div class="col-7">
+            <input type="checkbox" name="alumni" class="form-check-input" {% if entry.alumni %} checked {% endif %} />
+          </div>
+        </div>
+
+        <div class="row g-2 py-2">
+          <div class="col-3">
+            <label for="release_info" class="col-form-check-label"><b>Can We Release Your Info</b></label>
+          </div>
+          <div class="col-7">
+            <input type="checkbox" name="release_info" class="form-check-input" {% if entry.release_info %}checked{% endif %} />
+          </div>
+        </div>
+
+        <div class="row g-2 py-1">
+          <div class="col-3">
+            <label for="id_number" class="col-form-label visually-hidden"><b>ID</b></label>
+          </div>
+          <div class="col-7">
+            <input type="text" name="id_number" value="{{ entry.id_number }}" class="form-control visually-hidden"/>
+          </div>
+        </div>
+
+        <div class="row g-2 py-1">
+          <div class="col-3">
+            <label for="table_number" class="col-form-label visually-hidden"><b>Table Number</b></label>
+          </div>
+          <div class="col-7">
+            <input type="text" name="table_number" value="{{ entry.table_number }}" class="form-control visually-hidden"/>
+          </div>
+        </div>
+
+        <div>
+          <button class="btn btn-secondary" type="submit">Check-in</button>
+        </div>
+      </form>
+      {% endif %}
   </div>
-  <div class="right-column" style="flex: 1;">
+
+  <div class="col py-3">
     <!-- Text to be displayed on the right side -->
-    <h3>This page is for scanning QR codes that attendes have</h3>
+    <h3>QR Code Check-In</h3>
     <div style="font-size: 20px; line-height: 1.6;">
       <p>
-        <br/> 
+        <br> 
         1.  Make sure to click into the textbox before scanning.
-        <br/>
-          <div class="indent1" style="font-size: 17px; margin-left: 20px">a. If the number scans twice, clear the textbox and try again. </div>
-          <br/>  
+        <br>
+        <div class="indent1" style="font-size: 17px; margin-left: 20px">a. If the number scans twice, clear the textbox and try again. </div>
+        <br>  
         2. Click the "Search" button once the number is scanned.
-        <br/>
+        <br><br>
         <div class="indent1" style="font-size: 17px; margin-left: 20px">a. If the number is not found, the page will display an error message. Direct them to use the self check-in station</div>
-          <br/>
-          <div class="indent1" style="font-size: 17px; margin-left: 20px">b. If the number is found, the page will display the attendee's information. </div>
-          <br/>
+        <br>
+        <div class="indent1" style="font-size: 17px; margin-left: 20px">b. If the number is found, the page will display the attendee's information. </div>
+        <br>
         3. Verify that the info is accurate and click the "Check-in" button.
-        <br/>
-        </p>
-      </div>   
+        <br>
+      </p>
+    </div>
   </div>
 </div>
 {% endblock %}
